不具合修正(バッチ Phase2-a): 定期バッチ3本の取得条件をSQL側絞り込み＋ページングに是正 (#2631)
* 不具合修正(バッチ Phase2-a 1/3): 共有予定リマインダーバッチとmemberships/user_roles整合性チェックの取得条件をSQL側絞り込みに是正

- schedule-reminder バッチ: 未送信リマインダーの全件ロード+N+1をやめ、実効時刻判定をSQL側（schedulesとの結合）に寄せてIDキーセットページングで取得するよう変更。1件ごとに独立トランザクションでコミットし失敗を握り潰さず記録する
- membership整合性チェック: memberships/user_rolesの全件ロード+アプリ側集合演算をやめ、NOT EXISTS相関サブクエリでDBに差分件数を出させる形に変更
- 上記2点について実DB結合テストを追加

* 不具合修正(バッチ Phase2-a 2/3): 巡礼推薦バッチの村選定をSQL側の絞り込み+ランダム順取得に是正

- VillagePilgrimageBatchService: 全村ロード+ユーザーごとのアプリ側フィルタ（ユーザー数×村数のオーダー）をやめ、
  削除/凍結/UNLISTED除外・カテゴリ一致・参加済み/ピン済み除外をSQLのWHERE句に寄せ、DB側のランダム順から先頭1件のみ取得する形に変更
- 単体テストをリポジトリ呼び出し引数の検証に置き換え、絞り込み条件自体は実DB結合テストで検証

* 修正(バッチ Phase2-a CI是正): 越境Repository参照とテストフィクスチャ不備を根治

- MembershipConsistencyChecker が role ドメインの UserRoleRepository を直接参照していた
  越境違反（CrossDomainRepositoryDependencyArchTest 新規違反）を是正。RoleService に
  countUserRolesOnlyDiff / sampleUserRolesOnlyDiff を新設し、role ドメイン内部の
  Repository射影は公開せず UserRoleOnlyDiffRow DTO に詰め替えて返すよう変更。
  ArchUnit凍結ストアはこの越境の解消分のみ縮小（chip-away）
- ScheduleReminderServiceTest の「1件送信失敗時に後続へ影響しない」テストで、
  createSchedule() ヘルパーが id を常に固定値で返すため、2件目のスケジュール(id=2)を
  誤って1件目のスケジュール(id=1)として解決してしまいMockitoの厳格スタブ不一致で
  失敗していた。id を明示指定できるオーバーロードを追加してフィクスチャの不備を是正
  （本番コードの失敗隔離ロジック自体に問題はなかった）

* 修正(テスト基盤): ArchUnit 凍結ストアの意図しない縮小を差し戻す

--tests 絞り込み実行に伴い、本PRで一切変更していない ChatChannelService の
エントリまで凍結ストアから削除されていた。無関係なクラスの許容枠が縮むと
後続のPRが理由不明に落ちるため、凍結ストアを origin/main の状態へ戻す。

是正済みの越境依存が古いエントリとして残るが、FreezingArchRule は
実際の違反が保存分より少ない場合に失敗しないため安全側である。

* 修正(バッチ Phase2-a 検分是正): リマインダーバッチの外側TX混入とORDER BY RAND()を根治

- ScheduleReminderService#processScheduledReminders に Propagation.NEVER を明示し、
  クラス既定の readOnly TX を継承したまま REQUIRES_NEW を呼んでいた実装をJavadocの
  意図（外側TXなし・1件ごと独立コミット）どおりに是正
- VillageRepository の巡礼推薦候補取得を ORDER BY RAND() 全件ソートから
  ID絞り込みのみに変更し、アプリ側でランダムに1件選ぶ方式に変更（絞り込み条件は維持）

* 修正(テスト基盤): ArchUnit 凍結ストアを分岐点65e80e530と完全一致させる

テスト実行時に凍結ストアが意図せず縮小して汚染されたため、分岐点の内容に復元した。

* 修正(テスト基盤): ArchUnit 凍結ストアを origin/main に合わせる

分岐点の内容